fix float-right bug on mobile

--- a/packages/ndla-ui/src/global/utilities/utilities.helpers.scss
+++ b/packages/ndla-ui/src/global/utilities/utilities.helpers.scss
@@ -20,12 +20,6 @@
   @include float(3, 4, 'right');
 }
 
-
-/* Float tools */
-.u-float-right {
-  float: right;
-}
-
 /* MISC */
 .u-hidden {
   display: none !important;
